--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,17 @@
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
-            <plugin>
+                 <plugin>
+                 <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.1</version>
+		<configuration>
+		<source>1.7</source>
+					<target>1.8</target>
+					<fork>true</fork>
+					<executable>/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.212.b04-0.el7_6.x86_64/bin/javac</executable>
+				</configuration> 
+                          </plugin>
+            <plugin>     
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
                 <version>3.0.0</version>
